--- a/Localize/ru.lproj/Localizable.strings
+++ b/Localize/ru.lproj/Localizable.strings
@@ -1,9 +1,12 @@
-"trackers_title" = "Trackers";
-"what_to_track" = "What do you want to track?";
-"category_tip_multiline" = "You can grouphabits and events by meaning";
-"search" = "Search";
-"nothing_found" = "Nothing found";
-"delete_tracker_confirmation" = "Are you sure you want to delete this tracker?";
-"delete_tracker_button" = "Delete";
-"cancel_button" = "Cancel";
-"filters" = "Filters";
+"trackers_title" = "Трекеры";
+"statistics" = "Статистика";
+"what_to_track" = "Что будем отслеживать?";
+"search" = "Поиск";
+"nothing_found" = "Ничего не найдено";
+"filters" = "Фильтры";
+"day_1" = "день";
+"day_2" = "дня";
+"day_3" = "дней";
+"delete_tracker_confirm" = "Уверены, что хотите удалить трекер?";
+"delete_tracker_button" = "Удалить";
+"cancel_button" = "Отменить";
