--- a/Localize/en.lproj/Localizable.strings
+++ b/Localize/en.lproj/Localizable.strings
@@ -7,7 +7,8 @@
 "day_1" = "day";
 "day_2" = "days";
 "day_3" = "days";
+"edit_tracker" = "Edit";
 "delete_tracker_confirm" = "Are you sure you want to delete this tracker?";
-"delete_tracker_button" = "Delete";
+"delete_tracker" = "Delete";
 "cancel_button" = "Cancel";
 
